--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -40,6 +40,48 @@
 
         <!-- Content -->
         <div class="template2-group-content-panel position-relative ">
+
+            <!-- Modal -->
+            <div class="modal fade promotion-banner" id="modal-promotionbanner" tabindex="-1"
+                aria-labelledby="promotionbannerLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+
+                        <div class="modal-body">
+                            <div class="top-banner"><img id="modal-image" src="../images/bg-header-red.jpg"
+                                    style="width: 100%; height: 100%;"></div>
+                            <div class="data row">
+                                <div class="col-8">
+                                    <h2 id="modal-topic">เตรียมพบกับ Flash Sale 13:00 - 15:00</h2>
+                                    <h6 id="modal-zone"><i class="icon-location me-2"></i>ชั้น 1 โซน Care Living
+                                        Solution</h6>
+                                    <p id="modal-desc">สุดคุ้ม! สุด Cool! หน้าร้อนแต่บ้านต้องเย็น
+                                        เตรียมรับมืออากาศร้อนบ้านร้อน อบอ้าว
+                                        แก้ได้ด้วย
+                                        การเลือกวัสดุแต่งบ้านให้บ้านเย็น ช่วยลดอุณหภูมิ คลายความร้อน
+                                        ระบายความร้อนภายใน บ้าน และที่สำคัญยังช่วยประหยัดไฟอีกด้วย ร้อนนี้ SCG Home
+                                        Onlineยกสินค้าพร้อม</p>
+                                </div>
+                                <div class="col-4 data-right">
+                                    <div class="d-flex puchase-options ">
+                                        <div class="  puchase-option2 options qrcode" type="button">
+                                            <h6>แสกนรับสิทธิ์
+                                            </h6>
+                                            <img id="modal-qrcode" src="../images/qrcode.png" />
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-rednew" data-bs-dismiss="modal"> <i class="icon-close"></i>
+                                        <span>ปิดหน้าต่าง</span></button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div id="video-panel" class="template2-content-panel">
                 <div class="content-sectiion-temp-2">
                     <div class="fist-content">
@@ -48,13 +90,16 @@
                         </video>
                     </div>
                     <div class="second-content">
-                        <img src="" id="promotion-banner" style="width: 100%; height: 100%;">
+                        <img src="" id="promotion-banner" style="width: 100%; height: 100%;" data-bs-toggle="modal"
+                            data-bs-target="#modal-promotionbanner" style="width: 100%;"></img>
+                        <p id="modal-id" style="display: none;"></p>
                     </div>
                 </div>
             </div>
             <div class="d-flex align-items-center justify-content-center pt-5">
                 <button type="button"
-                    class="btn btn-secondary btn-template2 d-flex align-items-center justify-content-center" id="btn-product-list">
+                    class="btn btn-secondary btn-template2 d-flex align-items-center justify-content-center"
+                    id="btn-product-list">
                     <h1> แตะเพื่อ <img src="../images/cursor-point-icon-white.png" alt=""> ดูรายการสินค้า </h1>
                 </button>
             </div>
@@ -91,7 +136,7 @@
         </div>
     </main>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
 <script>
@@ -126,6 +171,8 @@
                 for (var i = 0; i < jd.page.ceiling_and_wall.promotion.banner.length; i++) {
                     console.log("test =>", jd.page.ceiling_and_wall.promotion.banner[i].url)
                     $('#promotion-banner').attr('src', jd.page.ceiling_and_wall.promotion.banner[i].url)
+                    $('#modal-id').text(i)
+
                     console.log('play banner')
                     const banner_url = await play(jd.page.ceiling_and_wall.promotion.banner[i].url, jd.page.ceiling_and_wall.promotion.banner[i].duration);
                     console.log(`banner  ${banner_url} was played`);
@@ -134,6 +181,15 @@
                 playAllBanner()
                 console.log('All banner were played');
             };
+
+            $('#promotion-banner').click(function () {
+                let index = $('#modal-id').text()
+                $('#modal-image').attr('src', jd.page.roof.promotion.banner[index].url)
+                $('#modal-topic').html(jd.page.roof.promotion.banner[index].topic)
+                $('#modal-zone').html(jd.page.roof.promotion.banner[index].zone)
+                $('#modal-desc').html(jd.page.roof.promotion.banner[index].content)
+                $('#modal-qrcode').attr('src', jd.page.roof.promotion.banner[index].qrcode)
+            })
 
             playAllVideo()
             playAllBanner()
